More keywords to help people explore the package

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,9 @@
 		"mysql",
 		"belongsTo",
 		"morphTo",
+		"laravel_reserved_0",
+		"laravel_reserved_",
+		"laravel_reserved",
 		"morph-where-has",
 		"where has"
 	],
