--- a/composer.json
+++ b/composer.json
@@ -29,9 +29,9 @@
 	],
 	"require": {
 		"php": ">=7.1",
-		"illuminate/contracts": "^5.5|^5.6",
-		"illuminate/database": "^5.6",
-		"illuminate/support": "^5.5|^5.6"
+		"illuminate/contracts": "^5.5|^5.6|^5.7|^5.8",
+		"illuminate/database": "^5.6|^5.7|^5.8",
+		"illuminate/support": "^5.5|^5.6|^5.7|^5.8"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "^7.0",
