--- a/composer.json
+++ b/composer.json
@@ -29,9 +29,9 @@
 	],
 	"require": {
 		"php": ">=7.1",
-		"illuminate/contracts": "^5.6|^5.7|^5.8|^6.0|^7.0",
-		"illuminate/database": "^5.6|^5.7|^5.8|^6.0|^7.0",
-		"illuminate/support": "^5.6|^5.7|^5.8|^6.0|^7.0"
+		"illuminate/contracts": "^5.6|^5.7|^5.8|^6.0|^7.0|^8.0",
+		"illuminate/database": "^5.6|^5.7|^5.8|^6.0|^7.0|^8.0",
+		"illuminate/support": "^5.6|^5.7|^5.8|^6.0|^7.0|^8.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "^7.0",
